# rp2040-rotary-encoder-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  test_uart.py
.github/workflows/: hardware-ci.yml  release.yml
encoder-client/: Cargo.toml
encoder-client/examples/: async_client.rs  sync_client.rs
encoder-client/src/: lib.rs
encoder-client/tests/: hardware_test.rs
encoder-firmware/: Cargo.toml
encoder-firmware/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs  uart_protocol.rs
