[workspace]
members = ["encoder-client", "shared"]
exclude = ["encoder-firmware"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
postcard = "1.0"
cobs = { version = "0.5.0", default-features = false }
crc = { version = "3.0", default-features = false }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true


[workspace.lints.rust]
ambiguous-glob-reexports = "deny"
clashing-extern-declarations = "deny"
const-item-mutation = "deny"
dangling-pointers-from-temporaries = "deny"
deref-nullptr = "deny"
drop-bounds = "deny"
future-incompatible = "deny"
hidden-glob-reexports = "deny"
improper-ctypes = "deny"
improper-ctypes-definitions = "deny"
invalid-from-utf8 = "deny"
invalid-macro-export-arguments = "deny"
invalid-nan-comparisons = "deny"
invalid-reference-casting = "deny"
invalid-value = "deny"
named-arguments-used-positionally = "deny"
non-ascii-idents = "deny"
opaque-hidden-inferred-bound = "deny"
overlapping-range-endpoints = "deny"
suspicious-double-ref-op = "deny"
unconditional-recursion = "deny"
unexpected_cfgs = { level = "deny", check-cfg = [
    "cfg(__ui_tests)",
    "cfg(bench)",
] }
unnameable-test-items = "deny"
unsafe-op-in-unsafe-fn = "deny"
unstable-syntax-pre-expansion = "deny"

keyword-idents = "warn"
let-underscore = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
noop-method-call = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unreachable-pub = "warn"
unused = { level = "warn", priority = -1 }
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

unstable-name-collisions = { level = "allow", priority = 1 } # overrides #![deny(future_incompatible)], temporary while `.cast_{un}signed()` is unstable

[workspace.lints.clippy]
alloc-instead-of-core = "deny"
std-instead-of-core = "deny"
undocumented-unsafe-blocks = "deny"

all = { level = "warn", priority = -1 }
as-underscore = "warn"
dbg-macro = "warn"
decimal-literal-representation = "warn"
explicit-auto-deref = "warn"
get-unwrap = "warn"
manual-let-else = "warn"
missing-docs-in-private-items = "warn"
missing-enforced-import-renames = "warn"
nursery = { level = "warn", priority = -1 }
obfuscated-if-else = "warn"
print-stdout = "warn"
semicolon-outside-block = "warn"
todo = "warn"
unimplemented = "warn"
uninlined-format-args = "warn"
unnested-or-patterns = "warn"
unwrap-in-result = "warn"
unwrap-used = "warn"
use-debug = "warn"

option-if-let-else = { level = "allow", priority = 1 }     # suggests terrible code, overrides #![warn(clippy::nursery)]
redundant-pub-crate = { level = "allow", priority = 1 }    # rust-lang/rust-clippy#5369, overrides #![warn(clippy::nursery)]
uninhabited-references = { level = "allow", priority = 1 } # rust-lang/rust-clippy#11984
incompatible-msrv = { level = "allow", priority = 1 }      # rust-lang/rust-clippy#12280

[workspace.lints.rustdoc]
private-doc-tests = "warn"
unescaped-backticks = "warn"
