[package]
name = "encoder-client"
version = "0.3.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"


[dependencies]
serialport = "4.3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "time",
] }
tokio-serial = "5.4.5"

[dev-dependencies]
dotenvy = "0.15"
