[package]
name = "encoder-firmware"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "encoder-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"


[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

rotary-encoder-embedded = { version = "0.5.0" }
encoder-protocol = { path = "../shared/" }
