[package]
name = "encoder-protocol"
version = "0.4.0"
edition = "2024"

[dependencies]
heapless = "0.9.2"

[features]
default = []
std = []

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
